# IsaacObjectViewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  imgui.ini  run.bat  run.sh
dependencies/ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h
dependencies/assimp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
dependencies/assimp/assimp/: revision.h
dependencies/assimp/code/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
dependencies/assimp/code/assimp.dir/Debug/: assimp-vc143-mtd.dll.recipe  assimp.res
dependencies/assimp/code/assimp.dir/Debug/assimp.tlog/: CL.10900.write.1.tlog  CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  assimp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
dependencies/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
dependencies/assimp/include/assimp/: revision.h
dependencies/assimp/lib/Debug/: assimp-vc143-mtd.exp
dependencies/assimp/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
dependencies/assimp/test/headercheck/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dependencies/assimp/test/models/PLY/: cube_out.ply
dependencies/assimp/test/models/glTF2/simple_skin/: quad_all_out.glb  (+3 more)
dependencies/assimp/test/unit.dir/Debug/: unit.exe.recipe
dependencies/assimp/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/backends/: imgui_impl_glfw.h
dependencies/include/glad/: glad.h
src/: CMakeLists.txt  main.cpp
src/Camera/: Camera.h
src/Core/: Engine.cpp  Engine.h
src/Engine/: CMakeLists.txt
src/Engine/Core/: Engine.cpp  Engine.h  IObject.h  Mouse.cpp  Mouse.h  Ray.h  Window.cpp  Window.h
src/Engine/Core/Camera/: Camera.cpp  Camera.h
src/Engine/Graphics/: Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Ray.cpp  Ray.h  Texture.cpp  Texture.h  Texture.hpp  TextureManager.cpp  TextureManager.h  Tracer.cpp  Tracer.h
src/Engine/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/Engine/Graphics/Lighting/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
src/Engine/Graphics/OpenGL/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Engine/Graphics/OpenGL/Lighting/: Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Engine/Graphics/OpenGL/Primitives/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  IPrimitive.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/Engine/Graphics/OpenGL/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Graphics/OpenGL/Shaders/: Shader.cpp  Shader.h
src/Engine/Graphics/Primitives/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Line.cpp  Line.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Tracer.h
src/Engine/Graphics/Renderer/: IRenderable.h  Renderer.h
src/Engine/Graphics/Shader/: Shader.cpp  Shader.h
src/Engine/Scene/: ISceneObject.h
src/Engine/Scene/Camera/: Camera.cpp  Camera.h
src/Engine/Scene/Models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Engine/Scene/Primitives/: Cube.cpp  Cube.h
src/Engine/UI/: ImGuiLayer.cpp  ImGuiLayer.h
src/Graphics/: Cube.cpp  Cube.h  IndexBuffer.cpp  Mesh.h  Model.cpp  Model.h  PrimitiveMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Resources/Shaders/: BasicLighting.fs  Cylinder.fs  Cylinder.vs  circle.fs  circle.vs  colors.fs  colors.vs  fragment.fs  light_cube.fs  light_cube.vs  line.fs  line.vs  main.fs  vertex.vs
src/Resources/Textures/floor/: TerrazzoFloor2K_roughness.tif
src/Utility/: CMakeLists.txt  ColorMacros.h  GLErrorManager.h  Log.cpp  Log.hpp  Timer.h  config.cpp  config.h
src/shaders/: colors.fs  colors.vs  vertex.vs
test/: CMakeLists.txt  some_test.cpp
tests/: example_test.cpp  test_main.cpp
(+40 files in other folders)
